hphp/hack/test/typecheck/array_unification/varray_to_vec_or_dict.php.exp
File "varray_to_vec_or_dict.php", line 11, characters 29-39:
Too few type arguments for this type (Naming[2071])
